# jackofalltrades

./: .gitignore  README.md  README.txt  binary.py  datasets-guide.md  evaluation-metrics.md  models_guide.md  pyproject.toml  setup.py
Models/: Regression.py
datasets/: all_fuels_data.csv  dataset.py
jackofalltrades/: .gitignore  LICENSE.txt  pyproject.toml  setup.py
jackofalltrades/Errors/: __init__.py  error.py
jackofalltrades/Models/: Classification.py  GAN.py  Regression.py  VAE.py  __init__.py
jackofalltrades/datasets/: __init__.py  all_fuels_data.csv  dataset.py  london_house_prices.csv
jackofalltrades/jackofalltrades/Models/: Regression.py
jackofalltrades/jackofalltrades/datasets/: BTC-USD.csv  dataset.py
jackofalltrades/jackofalltrades/test/: tests.py
jackofalltrades/test/: tests.py
jackofalltradespy/: __init__.py
jackofalltradespy/Models/: Regression.py
jackofalltradespy/app/: __init__.py  main.py  new.py  working.txt
jackofalltradespy/app/src/Errors/: error.py
jackofalltradespy/app/src/Models/: Regression.py  __init__.py
jackofalltradespy/app/test/: __init__.py  tests.py
jackofalltradespy/datasets/: dataset.py  new.ipynb
jackofalltradespy/test/: tests.py
test/: tests.py
