[project]
name = "jackofalltrades"
version = "0.0.1"
readme = "README.txt"
description = """
Tired of complex machine learning libraries? Introducing jackofalltrades, a streamlined Python package designed to make machine learning accessible for everyone.

**What sets jackofalltrades apart?**

- Simplicity: We prioritize clear, concise functions with minimal parameters and intuitive interfaces.
- Ease of Use: Get started quickly with our well-documented functions and a focus on straightforward implementation.
- Core Machine Learning Algorithms: Built-in implementations for essential algorithms like linear regression, classification models (coming soon!), and more.
- Compatibility: Seamlessly work with data formats used by popular libraries like scikit-learn.

**Ideal for:**

- Beginners eager to learn machine learning fundamentals.
- Experienced users seeking a simpler alternative for quick experimentation.
- Educators looking for a user-friendly teaching tool.

Embrace simplicity and unlock the power of machine learning with jackofalltrades!
"""
authors = [{ name = "Sane Punk", email = "punk00pp@gmail.com" }]
license = { text = "MIT" }
dependencies = ["pandas>=2.2.2", "numpy>=1.26.4", "scikit-learn>=1.5.0", "matplotlib>=3.9.0", "jax[cpu]>=0.4.28", "tqdm>=4.66.4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Machine Learning"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/lazy-punk/jackofalltrades"
Documentation = "https://github.com/lazy-punk/jackofalltrades"  # Replace with your documentation URL (coming soon)
